frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels: 
    component: frontend
    environment: dev
    tier: web  
  annotations:
    alb.ingress.kubernetes.io/listen-ports:  '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/group.name: roboshop
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:513993748676:certificate/4a6cc878-0de2-484c-9829-2ebf9187af11 # give your certificate arn no
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
  - host: "roboshop.84dev.store" # mention your host name 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 8080 #target port no
